
AM_CXXFLAGS=`pkg-config glibmm-2.4 --cflags` `pkg-config libxml++-2.6 --cflags`

lib_LTLIBRARIES=libNeXMLCpp.la
libNeXMLCpp_la_SOURCES=annotation.cpp character.cpp characters.cpp edge.cpp format.cpp id.cpp matrix.cpp  network.cpp nexml.cpp node.cpp otu.cpp otus.cpp state.cpp states.cpp tree.cpp util/makeid.cpp parser/parser.cpp
